force-app/main/default/objects/Notification_Preference__c/Notification_Preference__c.object-meta.xml
<CustomObject>
    <label>Notification Preference</label>
    <nameField>
        <displayFormat>NP-{00000}</displayFormat>
        <label>Preference Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notification Preferences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>