force-app/main/default/objects/Notification_Preference__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Notification Preferences</relationshipLabel>
    <relationshipName>Notification_Preferences</relationshipName>
    <type>Lookup</type>
</CustomField>