force-app/main/default/objects/Notification_Preference__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Notification Preferences</relationshipLabel>
    <relationshipName>Notification_Preferences</relationshipName>
    <type>Lookup</type>
</CustomField>