force-app/main/default/objects/Notification_Preference__c/fields/DND_End__c.field-meta.xml
<CustomField>
    <fullName>DND_End__c</fullName>
    <label>DND End</label>
    <type>Time</type>
</CustomField>