force-app/main/default/objects/Notification_Preference__c/fields/DND_Start__c.field-meta.xml
<CustomField>
    <fullName>DND_Start__c</fullName>
    <label>DND Start</label>
    <type>Time</type>
</CustomField>