force-app/main/default/objects/Notification_Preference__c/fields/Email_Optin__c.field-meta.xml
<CustomField>
    <fullName>Email_Optin__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Email Opt-in</label>
    <type>Checkbox</type>
</CustomField>