force-app/main/default/objects/Notification_Preference__c/fields/SMS_Optin__c.field-meta.xml
<CustomField>
    <fullName>SMS_Optin__c</fullName>
    <defaultValue>true</defaultValue>
    <label>SMS Opt-in</label>
    <type>Checkbox</type>
</CustomField>