force-app/main/default/objects/Notification_Preference__c/fields/Voice_Optin__c.field-meta.xml
<CustomField>
    <fullName>Voice_Optin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Voice Call Opt-in</label>
    <type>Checkbox</type>
</CustomField>