force-app/main/default/objects/Notification_Preference__c/fields/WhatsApp_Optin__c.field-meta.xml
<CustomField>
    <fullName>WhatsApp_Optin__c</fullName>
    <defaultValue>true</defaultValue>
    <label>WhatsApp Opt-in</label>
    <type>Checkbox</type>
</CustomField>